--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -93,11 +93,10 @@ h1 {
 }
 
 img {
-    max-width: 200px;
     float: center;
     padding-right: 10px;
     margin-top: 20px;
-    width: 100%;
+    width: 300px;
     float: left;
 }
 
@@ -107,17 +106,15 @@ img {
     bottom: 20px;
     position: relative;
     opacity: 0.8;
-
     float: left;
-    width: 200px;
-    height: auto;
+    height: 200px;;
     margin-top: 10px;
     margin-right: 25px;
 }
-.img-box h3 {
+.img-box p {
     position: absolute;
     bottom: 20px;
-    width: 100%;
+    width: 200px;
     padding: 15px;
     margin-bottom: 0;
     font-weight: 300;
